test/parser/good/forward_decl.ks
void main()
{
    int a;
    bool b;
    void c;
    a = 4;
    b = false;
}
