test/parser/bad/end_before_expr.ks
int main( void a )
{
    return